src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>DM_2_received_campaign_docs__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark true if 2nd line decision maker (e.g. instructor) has received documentation about sourcing campaign</inlineHelpText>
        <label>DM-2 received campaign docs?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_2_understood_campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark true if 2nd line decision maker (e.g. instructor) has understood the sourcing campaign process (incentives and constraints)</inlineHelpText>
        <label>DM-2 understood campaign?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DM_2_understood_opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark true if 2nd line decision maker (e.g. instructor) understood the potential of the opportunity (meaning: we answered his questions around enrollment, revenue, market size, target audience,....as much as we can)</inlineHelpText>
        <label>DM-2 understood opportunity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Daily_avg_post_launch_revenue__c</fullName>
        <description>Daily avg revenue on platform (populated automatically when live on Coursera; linked to DWH)</description>
        <inlineHelpText>Daily avg revenue on platform (populated automatically when live on Coursera; linked to DWH)</inlineHelpText>
        <label>Outdated Avg. daily post-launch revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Deal_Terms_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Selected once deal terms have been reviewed/approved</description>
        <inlineHelpText>Selected once deal terms have been reviewed/approved</inlineHelpText>
        <label>Deal Terms Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Terms__c</fullName>
        <description>Primary deal terms to document (and/or need review/approval for)</description>
        <inlineHelpText>Primary deal terms to document (and/or need review/approval for)</inlineHelpText>
        <label>Deal Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Degree_Initial_Proposal_Form__c</fullName>
        <label>Degree Initial Proposal Form</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Degree_Term_Sheet__c</fullName>
        <label>Degree Term Sheet</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Description_Page_Launch_Date__c</fullName>
        <inlineHelpText>Date the SDP or CDP will launch</inlineHelpText>
        <label>SDP/CDP Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Discount_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Automatically selected if discount within volume bands; also automatically selected if over volume bands but approved via approval process</description>
        <inlineHelpText>Automatically selected if discount within volume bands; also automatically selected if over volume bands but approved via approval process</inlineHelpText>
        <label>Outdated Discount Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_Name__c</fullName>
        <inlineHelpText>Platform name (as updated by Emma + Frances)</inlineHelpText>
        <label>Display Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Draft_Confirmation_Letter__c</fullName>
        <inlineHelpText>CSM drafts draft confirmation letter for TAM to confirm with partner</inlineHelpText>
        <label>Draft Confirmation Letter Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EOI_Notes__c</fullName>
        <label>EOI Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EOI_Signoff__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOI Signoff</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Employee_Size__c</fullName>
        <description>Employee Size for B2B opportunities</description>
        <label>Employee Size</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exclude_from_RFP_Process__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box only if you are sure the target is moving forward outside of the RPF process.</inlineHelpText>
        <label>Exclude from RFP Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Launch_Quarter__c</fullName>
        <label>Expected Launch - Quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Q1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Q4</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expected_Launch_Year__c</fullName>
        <label>Expected Launch - Year</label>
        <picklist>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Faculty_members_identified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>First line decision maker has identified potential faculty member(s)/ has validated the faculty members we suggested</inlineHelpText>
        <label>Faculty members identified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Day_CFQ__c</fullName>
        <description>First day of the current Close Date on the opportunity</description>
        <formula>if(year(today())=2016, 
if(month(today())=1,today()-day(today())+1, 
if(month(today())=2,today()-day(today())-31+1, 
if(month(today())=3,today()-day(today())-29-31+1, 
if(month(today())=4,today()-day(today())+1, 
if(month(today())=5,today()-day(today())-30+1, 
if(month(today())=6,today()-day(today())-31-30+1, 
if(month(today())=7,today()-day(today())+1, 
if(month(today())=8,today()-day(today())-31+1, 
if(month(today())=9,today()-day(today())-31-31+1, 
if(month(today())=10,today()-day(today())+1, 
if(month(today())=11,today()-day(today())-31+1, 
today()-day(today())-30-31+1))))))))))), 
if(month(today())=1,today()-day(today())+1, 
if(month(today())=2,today()-day(today())-31+1, 
if(month(today())=3,today()-day(today())-28-31+1, 
if(month(today())=4,today()-day(today())+1, 
if(month(today())=5,today()-day(today())-30+1, 
if(month(today())=6,today()-day(today())-31-30+1, 
if(month(today())=7,today()-day(today())+1, 
if(month(today())=8,today()-day(today())-31+1, 
if(month(today())=9,today()-day(today())-31-31+1, 
if(month(today())=10,today()-day(today())+1, 
if(month(today())=11,today()-day(today())-31+1, 
today()-day(today())-30-31+1))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>First day of the current Close Date on the opportunity</inlineHelpText>
        <label>First Day CFQ</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Day_of_Quarter__c</fullName>
        <defaultValue>if(year(today())=2016, 
if(month(today())=1,today()-day(today())+1, 
if(month(today())=2,today()-day(today())-31+1, 
if(month(today())=3,today()-day(today())-29-31+1, 
if(month(today())=4,today()-day(today())+1, 
if(month(today())=5,today()-day(today())-30+1, 
if(month(today())=6,today()-day(today())-31-30+1, 
if(month(today())=7,today()-day(today())+1, 
if(month(today())=8,today()-day(today())-31+1, 
if(month(today())=9,today()-day(today())-31-31+1, 
if(month(today())=10,today()-day(today())+1, 
if(month(today())=11,today()-day(today())-31+1, 
today()-day(today())-30-31+1))))))))))), 
if(month(today())=1,today()-day(today())+1, 
if(month(today())=2,today()-day(today())-31+1, 
if(month(today())=3,today()-day(today())-28-31+1, 
if(month(today())=4,today()-day(today())+1, 
if(month(today())=5,today()-day(today())-30+1, 
if(month(today())=6,today()-day(today())-31-30+1, 
if(month(today())=7,today()-day(today())+1, 
if(month(today())=8,today()-day(today())-31+1, 
if(month(today())=9,today()-day(today())-31-31+1, 
if(month(today())=10,today()-day(today())+1, 
if(month(today())=11,today()-day(today())-31+1, 
today()-day(today())-30-31+1))))))))))))</defaultValue>
        <description>Hidden field – first day of the quarter</description>
        <inlineHelpText>Hidden field – first day of the quarter</inlineHelpText>
        <label>zFirst Day of Quarter (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_Potential_Spend__c</fullName>
        <description>Future Potential Spend picklist on B2B Opportunities</description>
        <label>Future Potential Spend</label>
        <picklist>
            <picklistValues>
                <fullName>Identify Land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expand Opportunities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_Pricing_Products__c</fullName>
        <inlineHelpText>Checked if the deal has pricing and products</inlineHelpText>
        <label>Outdated # Line Items</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Inbound_Proposal__c</fullName>
        <inlineHelpText>If Lead Type = Inbound, this field is required.</inlineHelpText>
        <label>Inbound Proposal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inbound_lead_request__c</fullName>
        <description>The original (self-described) request from lead, if inbound from the website</description>
        <inlineHelpText>The original (self-described) request from lead, if inbound from the website</inlineHelpText>
        <label>Inbound lead request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interested_in_only_non_English_content__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in only non-english content</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internally_Approved_by_CBO__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if opportunity for new Industry Partner is approved internally by CBO or not</description>
        <inlineHelpText>Is this new IP prospect approved internally by CBO?</inlineHelpText>
        <label>Internally Approved by CBO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intro_call_completed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if discussions about the wish list has happened (call or visit)</inlineHelpText>
        <label>Intro call completed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Batched_Sourcing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark this true if wishlist is being sourced in batches for pre identified target partners and not open to all</inlineHelpText>
        <label>Is Batched Sourcing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_RFP_Approved_by_T_L__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark true if associated T&amp;L person has reviewed the proposal, answered all open questions and has made a decision to approve</inlineHelpText>
        <label>Is RFP Approved by T&amp;L?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_RFP_Approved_by_VM__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark True if VM has reviewed the proposal and answered all open questions and has made a decision to approve</inlineHelpText>
        <label>Is RFP Approved by VM?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_RFP_submitted_by_partner__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark this true if the proposal has been received from partner and it has been uploaded to Salesforce Opportunity.</inlineHelpText>
        <label>Is RFP submitted by partner?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_approved_by_E_Staff__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is E-staff approval received from this RFP?</inlineHelpText>
        <label>Is approved by E-Staff?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_there_SLA_Language__c</fullName>
        <description>Is there SLA Language? picklist for B2B opportunities</description>
        <label>Is there SLA Language?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Just_To_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Just To Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lack_of_production_resources__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lack of production resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Simplified)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese (Brazilian)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese (Traditional)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hebrew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turkish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catalan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ukrainian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese (European)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albanian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Swedish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dutch</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Launch_Cycle_Match__c</fullName>
        <formula>TEXT(Launch_Cycle__c) =  Preferred_Launch_Cycle__c</formula>
        <label>Launch Cycle Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launch_Cycle__c</fullName>
        <label>Launch Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>Winter 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May 2017 - Social Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spring 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fall 2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September Challenge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Off-Cycle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February 2016</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Source__c</fullName>
        <description>For B2B: primary distinction between inbound or outbound source</description>
        <inlineHelpText>For B2B: primary distinction between inbound or outbound source</inlineHelpText>
        <label>Lead Source</label>
        <picklist>
            <controllingField>Sales_Channel__c</controllingField>
            <picklistValues>
                <fullName>Inbound: Coursera network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound: Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound: Channel vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound: Identified organic usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound: Proactive outreach</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Summary__c</fullName>
        <description>Summary of the new Industry Partner lead record</description>
        <inlineHelpText>Summary of the new Industry Partner lead</inlineHelpText>
        <label>Lead Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Type__c</fullName>
        <inlineHelpText>Did this Opp come from a wishlist, or did a partner send this outside a wishlist?</inlineHelpText>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Wishlist</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Legal_Addendum_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Legal Addendum Signed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Licenses__c</fullName>
        <description>Sums the # of licenses listed among products</description>
        <inlineHelpText>Sums the # of licenses listed among products</inlineHelpText>
        <label>Outdated # Licenses</label>
        <summarizedField>OpportunityLineItem.Quantity</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Link_to_RFP_submitted_by_partner__c</fullName>
        <inlineHelpText>This is not a approved RFP. It is RFP submitted by partner.</inlineHelpText>
        <label>Link to RFP submitted by partner</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Signed_Confirmation_Document__c</fullName>
        <inlineHelpText>link to final signed confirmation document</inlineHelpText>
        <label>Link to Signed Confirmation Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>List_of_Production_Resources__c</fullName>
        <inlineHelpText>List of resources identified by Instructor for production</inlineHelpText>
        <label>List of Production Resources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Budget / Lost Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision / Non-Responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected by UAB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected Internally by Coursera</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_Course_Type__c</fullName>
        <description>The primary course type</description>
        <inlineHelpText>The primary course type</inlineHelpText>
        <label>Main Course Type</label>
        <picklist>
            <picklistValues>
                <fullName>Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S12n</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Degree</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exec Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certificate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Main_POC__c</fullName>
        <description>Main POC for B2B Opportunities</description>
        <label>Main POC</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_discount_percentage__c</fullName>
        <description>Max discount percentage from line items</description>
        <inlineHelpText>Max discount percentage from line items</inlineHelpText>
        <label>Max Discount Percentage</label>
        <summarizedField>OpportunityLineItem.Discount</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mktg_Questionnaire__c</fullName>
        <inlineHelpText>Mktg questionnaire</inlineHelpText>
        <label>Mktg Questionnaire</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mktg_SDP_copy_doc__c</fullName>
        <inlineHelpText>From mktg - doc for SDP copy edits</inlineHelpText>
        <label>Mktg - SDP copy doc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mktg_SEO_doc__c</fullName>
        <inlineHelpText>From mktg - doc for SEO for titles/URLs</inlineHelpText>
        <label>Mktg - SEO doc</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Monthly_Amount_USD__c</fullName>
        <formula>ExpectedRevenue / Contract_Months_Calculated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>B2B: MRR for a given deal</inlineHelpText>
        <label>Monthly Amount (USD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_IP_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is backend field which will be auto populated based on Account value. This is created to create one more related list on account level for New IP Opportunties</description>
        <inlineHelpText>auto populated based on Account value. This is created to create one more related list on account level for New IP Opportunties</inlineHelpText>
        <label>New IP Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>New IP Opportunities</relationshipLabel>
        <relationshipName>New_IP_Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Last_Updated_By__c</fullName>
        <label>Next Steps Last Updated By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Last_Updated__c</fullName>
        <description>Automatically timestamps when the &apos;Next Steps&apos; above were last updated</description>
        <inlineHelpText>Automatically timestamps when the &apos;Next Steps&apos; above were last updated</inlineHelpText>
        <label>Next Steps Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_interest_from_PoC_Instructor__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if reasons for loss included: topic or target not interesting to PoC or Instructor</description>
        <inlineHelpText>Checked if reasons for loss included: topic or target not interesting to PoC or Instructor</inlineHelpText>
        <label>Weak interest from PoC/Instructor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_response_dormant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if reasons for loss included: partner was unresponsive to target.</description>
        <inlineHelpText>Checked if reasons for loss included: partner was unresponsive to target.</inlineHelpText>
        <label>No response/dormant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_aligned_to_Career_Tracks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not aligned to Career Tracks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes_details_on_loss__c</fullName>
        <description>Describe any additional commentary that would be useful in understanding why this target was lost</description>
        <inlineHelpText>Describe any additional commentary that would be useful in understanding why this target was lost</inlineHelpText>
        <label>Notes/details on loss</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <description>Unique 18-character case insensitive ID</description>
        <formula>CASESAFEID( Id )</formula>
        <inlineHelpText>Unique 18-character case insensitive ID</inlineHelpText>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if reasons for loss exclude any of the other possible reasons listed</description>
        <inlineHelpText>Checked if reasons for loss exclude any of the other possible reasons listed</inlineHelpText>
        <label>Other</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Owner_Role__c</fullName>
        <description>Created to set List view Filters</description>
        <formula>Owner.UserRole.Name</formula>
        <label>Owner Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POC_DM_1_understood_opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Mark true if POC (and further decision makers) understood the potential of the opportunity (meaning: we answered his questions around enrollment, revenue,....as much as we can)</inlineHelpText>
        <label>POC/DM- 1 understood opportunity?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Campaign__c</fullName>
        <formula>Campaign.Parent.Name</formula>
        <label>Parent Campaign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pedagogy_Reviewer_formula__c</fullName>
        <formula>Campaign.Parent.Parent.Pedagogy_Reviewer__r.FirstName + &quot; &quot; + Campaign.Parent.Parent.Pedagogy_Reviewer__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pedagogy Reviewer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pedagogy__c</fullName>
        <description>Pedagogy Summary for Industry Partner Prospect</description>
        <inlineHelpText>Pedagogy summary for new industry partner prospect</inlineHelpText>
        <label>Pedagogy</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Platform_Course_ID__c</fullName>
        <inlineHelpText>Actual course ID on platform (populated automatically when live on Coursera; linked to DWH)</inlineHelpText>
        <label>Platform Course ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Pre_Proposal_Target_Date__c</fullName>
        <description>Date on which the Partnership Manager is driving towards the pre-proposal to be submitted</description>
        <inlineHelpText>Date on which the Partnership Manager is driving towards the pre-proposal to be submitted</inlineHelpText>
        <label>Pre-Proposal Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Preferred_Launch_Cycle__c</fullName>
        <formula>Campaign.Preferred_Launch_Cycle__c</formula>
        <label>Preferred Launch Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_Source__c</fullName>
        <formula>TEXT(Campaign.Preferred_Source__c)</formula>
        <label>Preferred Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Model__c</fullName>
        <inlineHelpText>For B2B - add in details later</inlineHelpText>
        <label>Pricing Model</label>
        <picklist>
            <picklistValues>
                <fullName>Learner pre-pay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard B2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
                <color>#E27001</color>
            </picklistValues>
            <picklistValues>
                <fullName>Course Redemption (DEPRECATED)</fullName>
                <color>#419249</color>
            </picklistValues>
            <picklistValues>
                <fullName>Licenses (DEPRECATED)</fullName>
                <color>#000099</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Prior_Steps_Auto_tracked__c</fullName>
        <description>Automatic documentation of any previous &apos;Next Steps&apos; you had in this opportunity.</description>
        <inlineHelpText>Automatic documentation of any previous &apos;Next Steps&apos; you had in this opportunity. Will be updated whenever you update new next steps above.</inlineHelpText>
        <label>Prior Steps (Auto-tracked)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority_Target__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Priority Target for managers to select when necessary</description>
        <label>Priority Target</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Production_Owner_Old__c</fullName>
        <inlineHelpText>Who owns the launch of this content?</inlineHelpText>
        <label>Production Owner_Old</label>
        <picklist>
            <picklistValues>
                <fullName>Peter Barna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elizabeth Madariaga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Justin Barker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brandon Iljas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Xiaofei Zhang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isha Bhardwaj</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meera Ramakrishnan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fannie Watkinkson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partnership Manager</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>